--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
-  "name": "timers_app",
-  "version": "1.1.0",
-  "author": "Fullstack.io",
-  "scripts": {
-    "go": "open http://localhost:3000; npm run server",
-    "e2e": "nightwatch; npm run reset-data;",
-    "reset-data": "cp data.json.pristine data.json",
-    "test": "npm run reset-data; ./node_modules/.bin/concurrently -k 'npm run server' 'npm run e2e'",
-    "server": "babel-node server.js",
-    "start": "npm run server"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
-  },
+  "name": "legal-frontend",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "babel-cli": "6.22.2",
-    "babel-core": "6.22.1",
-    "babel-preset-es2015": "6.22.0",
-    "body-parser": "1.14.1",
-    "express": "4.13.3",
-    "fs": "0.0.2",
-    "path": "0.12.7"
+    "ky": "^0.33.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "concurrently": "2.2.0"
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "vite": "^4.3.9"
   }
 }
